crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@bounded_repeat_group_edge.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
assertion_line: 29
expression: snapshot.to_string()
---
fired_rules: none
output: [r]
pattern:
  bindings: 3 [a, b, r]
  join_tree: Scan(a)->Repeat(r->b;1..2)
  pattern_filters: 0
  scans:
    - a (Node): Linear residual=0 consumed=0
    - r (Edge): Linear residual=0 consumed=0
  order_access: []
pipeline:
  - Project(columns=[r])
