crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@composite_index_with_residual.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
expression: snapshot.to_string()
---
fired_rules: and_splitting, filter_pushdown, node_filter_extraction, composite_index_lookup
output: [n]
pattern:
  bindings: 1 [n]
  join_tree: Scan(n)
  pattern_filters: 0
  scans:
    - n (Node): CompositeLookup [bounds=Composite [tenant=STRING 'X', kind=STRING 'Y']] residual=1 consumed=0
  order_access: []
pipeline:
  - Project(columns=[n])
