crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@constant_fold_and_split.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
expression: snapshot.to_string()
---
fired_rules: constant_folding, and_splitting, node_filter_extraction
output: [n]
pattern:
  bindings: 1 [n]
  join_tree: Scan(n)
  pattern_filters: 2
  scans:
    - n (Node): Linear residual=1 consumed=0
  order_access: []
pipeline:
  - Project(columns=[n])
