crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@in_list_bitmap_union.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
expression: snapshot.to_string()
---
fired_rules: filter_pushdown, node_filter_extraction, in_list_optimization
output: [p]
pattern:
  bindings: 1 [p]
  join_tree: Scan(p)
  pattern_filters: 0
  scans:
    - p (Node): BitmapUnion [bounds=Keys [STRING 'alice@example.com', STRING 'bob@example.com']] residual=0 consumed=0
  order_access: []
pipeline:
  - Project(columns=[p])
