crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@label_scan_single_label.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
expression: snapshot.to_string()
---
fired_rules: label_scan
output: [n]
pattern:
  bindings: 1 [n]
  join_tree: Scan(n)
  pattern_filters: 0
  scans:
    - n (Node): LabelIndex residual=0 consumed=0
  order_access: []
pipeline:
  - Project(columns=[n])
